syntax = "proto3";

package bot;

service Bot {
  rpc Commands (CommandsRequest) returns (CommandsResponse);
  rpc Shards (ShardsRequest) returns (ShardsResponse);
}

message CommandsRequest {}

message CommandsResponse {
  repeated Command commands = 1;
}

message Command {
  string category = 1;
  string name = 2;
  string description = 3;
  repeated CommandOption options = 4;
}

message CommandOption {
  string name = 1;
  string description = 2;
  bool required = 3;
  repeated CommandOptionChoice choices = 4;
}

message CommandOptionChoice {
  string name = 1;
}

message ShardsRequest {}

message ShardsResponse {
  repeated Shard shards = 1;
}

message Shard {
  uint32 id = 1;
  ShardStage stage = 2;
  optional uint64 latency = 3;
}

enum ShardStage {
  CONNECTED = 0;
  CONNECTING = 1;
  DISCONNECTED = 2;
  HANDSHAKE = 3;
  IDENTIFYING = 4;
  RESUMING = 5;
}
